--- a/HelpWeb/TestMain/TestMain.csproj
+++ b/HelpWeb/TestMain/TestMain.csproj
@@ -32,19 +32,126 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.Business">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.DB2DAL">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.DB2DAL.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.Factory">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.Factory.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.IDAL">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.IDAL.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.Model">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.MySQLDAL">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.MySQLDAL.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.DBAccessLayer.OleDbDAL">
+      <HintPath>..\DLL\DBAccessLayer\Help.DBAccessLayer.OleDbDAL.dll</HintPath>
+    </Reference>
+    <Reference Include="Help.EF.UsermanageDB">
+      <HintPath>..\DLL\UsermanageDBEF\Help.EF.UsermanageDB.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.Mvc.4.0.1\lib\net45\Microsoft.Practices.Unity.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\MySql.Data.Entity.6.9.3\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.4.0.20710.0\lib\net40\System.Web.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.20710.0\lib\net40\System.Web.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Deployment.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.WebApi, Version=5.2.3.0, Culture=neutral, PublicKeyToken=43da31bc42a85347, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.WebAPI.5.2.3\lib\net45\Unity.WebApi.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\UnityConfig.cs" />
+    <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,42 +159,19 @@
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
     <None Include="Test.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Help.Common.APIModel\Help.Common.APIModel.csproj">
-      <Project>{b18cbea3-0f33-417e-99f8-cba645ebd573}</Project>
-      <Name>Help.Common.APIModel</Name>
+    <ProjectReference Include="..\Help.Common.Factory\Help.Common.Factory.csproj">
+      <Project>{f6be98b9-84ab-4d70-9ed5-669af1ee4ed0}</Project>
+      <Name>Help.Common.Factory</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Help.Common.Util\Help.Common.Util.csproj">
-      <Project>{b135509f-33eb-466f-9fde-919dce331f06}</Project>
-      <Name>Help.Common.Util</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.Component.DataBase\Help.Component.DataBase.csproj">
-      <Project>{11c0621e-77c7-443c-b588-bd33b578510e}</Project>
-      <Name>Help.Component.DataBase</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.Business\Help.DBAccessLayer.Business.csproj">
-      <Project>{251d9501-872b-428d-b815-da756a43a087}</Project>
-      <Name>Help.DBAccessLayer.Business</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.DB2DAL\Help.DBAccessLayer.DB2DAL.csproj">
-      <Project>{7b7e2b82-ea9d-4f4f-a979-d2881cd55175}</Project>
-      <Name>Help.DBAccessLayer.DB2DAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.Factory\Help.DBAccessLayer.Factory.csproj">
-      <Project>{56070205-2b64-40ba-8bac-06147c6b8d7c}</Project>
-      <Name>Help.DBAccessLayer.Factory</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.IDAL\Help.DBAccessLayer.IDAL.csproj">
-      <Project>{4833d0e7-5516-4793-bedc-836f2cce6589}</Project>
-      <Name>Help.DBAccessLayer.IDAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Help.DBAccessLayer.Model\Help.DBAccessLayer.Model.csproj">
-      <Project>{739a4717-4144-49d6-aebe-cf7e428e548b}</Project>
-      <Name>Help.DBAccessLayer.Model</Name>
+    <ProjectReference Include="..\Help.Common.Service\Help.Common.Service.csproj">
+      <Project>{96f0dab3-8cc8-4fe0-95a5-25fb86407ebc}</Project>
+      <Name>Help.Common.Service</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
